# Automatic-bargain-hunting

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  test.c
data/: bilka-to-go.json  bilka.json  coop.json  foetex.json  rema-1000.json  salling.json
data-generator/salling-api/: failed.json
data-generator/salling-api/src/com/g106/: Main.java  MultiThread.java  SallingApiDriver.java  queries.java
data-generator/salling-api/src/com/g106/multithread/: MultiThread.java
data-generator/salling-api/src/com/g106/multithread/threads/: MultiThreadBilka.java  MultiThreadCoop.java  MultiThreadFoetex.java  MultiThreadRema.java
data-generator/salling-api/src/com/g106/network/: ApiHandler.java  Api_Handler.java  ChromeDriver.java  Chrome_Driver.java
data-generator/salling-api/src/com/g106/network/apiDrivers/: BilkaApiDriver.java  CoopApiDriver.java  FoetexApiDriver.java  RemaApiDriver.java  SallingApiDriver.java
data-generator/salling-api/src/com/g106/queries/: CoopQueries.java  FoetexQueries.java  RemaQueries.java
data-generator/salling-api/src/com/g106/util/: ItemData.java  JsonHandler.java  Json_Handler.java  Logger.java
data-generator/scrapper/: rema-1000.py
data-generator/src/com/g106/: Main.java
data_manager/: data_manager.c  data_manager.h
documentation/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  dir_18a261b5c90894aff23e72b4e08dba4b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b6c5c676dc672c0e12ac21313816c889.html  dir_cee576d101231f5a9874fa1a8a01820f.html  dir_d7b66968a82c161662fa136e3ce34537.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_c.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_g.html  globals_func_j.html  globals_func_m.html  globals_func_p.html  globals_func_s.html  globals_func_t.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_m.html  globals_o.html  globals_p.html  globals_s.html  globals_t.html  (+20 more)
documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_1.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  enums_0.js  enumvalues_0.js  files_2.js  files_4.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  typedefs_0.js  (+12 more)
documentation/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  dir_18a261b5c90894aff23e72b4e08dba4b.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b6c5c676dc672c0e12ac21313816c889.tex  dir_cee576d101231f5a9874fa1a8a01820f.tex  dir_d7b66968a82c161662fa136e3ce34537.tex  files.tex  main_8c.tex  md__r_e_a_d_m_e.tex  md_parson__r_e_a_d_m_e.tex  parson_2_r_e_a_d_m_e_8md.tex  parson_8c.tex  parson_8h.tex  parson_8h_source.tex  refman.tex  structfailing__alloc.tex  structjson__array__t.tex  structjson__object__t.tex  structjson__string.tex  structjson__value__t.tex  test_8c.tex  tests_8c.tex  unionjson__value__value.tex
examples/: CMakeLists.txt  example_1.c  example_2.c
libs/: CMakeLists.txt
libs/utility/: utility.c  utility.h
randomly_generated_testcases/: CMakeLists.txt  random_testcases.c  random_testcases.h  test1.c
src/: CMakeLists.txt  main.c
src/data_manager/: data_loader.c  data_loader.h  data_manager.c  data_manager.h  rank_stores.c  rank_stores.h  sort_stores.c  sort_stores.h
src/io/: user_io.c  user_io.h
src/search/: search.c  search.h
src/util/: node_handler.c  node_handler.h  store_utility.c  store_utility.h  string_utility.c  string_utility.h  unit_type_conversion.c  unit_type_conversion.h  user_io_utility.c  user_io_utility.h
tests/: CMakeLists.txt  test.c
tests/data_manager/: data_manager.c
tests/io/: user_io.c
tests/search/: find_items.c  search_store.c
tests/util/string_utility/: str_contains_str.c  str_to_lower.c
tests/util/unit_type_conversions/: str_to_unit_type.c  unit_type_to_str.c
tests/util/user_io_utility/: grocery_list_length.c
